Don't use light variation of Source Sans Pro as it is unreadable on Windows. fixes #42

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,7 +8,6 @@ body {
 }
 body, input, select, textarea, button {
   font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-  font-weight: 300;
 }
 .container {
   max-width: 1040px;
@@ -33,7 +32,7 @@ a:hover {
 h2 {
   font-size: 36px;
   color: #E7672E;
-  font-weight: 300;
+  font-weight: normal;
 }
 
 .lead {
