--- a/_sass/_docs.scss
+++ b/_sass/_docs.scss
@@ -35,13 +35,13 @@
 .Docs h1 {
   color: #E7672E;
   font-size: 36px;
-  font-weight: 300;
+  font-weight: normal;
   margin: 0 0 .5em;
 }
 .Docs h2 {
   color: #3C5675;
   font-size: 26px;
-  font-weight: 300;
+  font-weight: normal;
   margin: 1.5em 0 .5em;
 }
 .Docs h3 {
@@ -52,7 +52,7 @@
 .Docs h4 {
   color: #3C5675;
   font-size: 20px;
-  font-weight: 300;
+  font-weight: normal;
 }
 .Docs blockquote {
   background: #EFF2F6;
