--- a/_sass/_features.scss
+++ b/_sass/_features.scss
@@ -19,7 +19,7 @@
 .Feature-header h3 {
   font-size: 37px;
   color: #E7672E;
-  font-weight: 300;
+  font-weight: normal;
   margin: .25em 0;
 }
 .Feature-header p {
