--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -50,7 +50,7 @@
   margin-bottom: 15px;
 }
 .Intro p {
-  max-width: 450px;
+  max-width: 460px;
   font-size: 20px;
   margin: 0 auto 40px;
 }
@@ -173,7 +173,7 @@
 .Team-member h3 a {
   border: 0;
   color: #E7672E;
-  font-weight: 300;
+  font-weight: normal;
   font-size: 20px;
 }
 .Team-member h3 img {
@@ -181,7 +181,7 @@
   margin: 0 auto 10px;
 }
 .Team-member h4 {
-  font-weight: 300;
+  font-weight: normal;
   font-size: 16px;
   margin: 0;
 }
@@ -215,13 +215,13 @@
   text-align: center;
 }
 .Actions-item h3 {
-  font-weight: 300;
+  font-weight: normal;
   font-size: 30px;
   color: #E7672E;
   margin: 0 0 10px;
 }
 .Actions-item h4 {
-  font-weight: 300;
+  font-weight: normal;
   font-size: 20px;
   color: #3C5675;
   margin: 0;
